<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>RasterFile</class>
 <widget class="QDialog" name="RasterFile">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>342</width>
    <height>200</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Remove Clouds</string>
  </property>
  <layout class="QGridLayout" name="gridLayout_2">
   <item row="0" column="0">
    <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0" colspan="2">
      <layout class="QHBoxLayout" name="horizontalLayout_4">
       <item>
        <widget class="QLabel" name="image">
         <property name="text">
          <string>Image:</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QLineEdit" name="referenceImage"/>
       </item>
       <item>
        <widget class="QPushButton" name="PushButtonOpenImage">
         <property name="text">
          <string>Open Image...</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="1" column="0" colspan="2">
      <widget class="QListWidget" name="listWidgetTif">
       <property name="dragDropMode">
        <enum>QAbstractItemView::InternalMove</enum>
       </property>
       <property name="defaultDropAction">
        <enum>Qt::TargetMoveAction</enum>
       </property>
      </widget>
     </item>
     <item row="2" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout">
       <item>
        <widget class="QPushButton" name="PushButtonImage">
         <property name="text">
          <string>Image...</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="PushButtonRemoveImage">
         <property name="text">
          <string>Remove</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
     <item row="2" column="1">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
        <widget class="QPushButton" name="PushButtonOK">
         <property name="text">
          <string>OK</string>
         </property>
        </widget>
       </item>
       <item>
        <widget class="QPushButton" name="PushButtonCancel">
         <property name="text">
          <string>Cancel</string>
         </property>
        </widget>
       </item>
      </layout>
     </item>
    </layout>
   </item>
  </layout>
  <zorder></zorder>
 </widget>
 <resources/>
 <connections/>
</ui>
